# chip8

./: .gitignore  Cargo.toml  README.md
chip8_core/: Cargo.toml
chip8_core/src/: lib.rs
desktop/: Cargo.toml  build.rs
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: app.rs  lib.rs  main.rs
wasm/web/: index.html  index.js  wasm.js  wasm_bg.wasm
