[package]
name = "wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
chip8_core = { path = "../chip8_core/" }
leptos = "0.8.15"
leptos_meta = "0.8.5"
leptos_router = "0.8.11"
console_error_panic_hook = { version = "0.1.7", optional = true }

# client
js-sys = { version = "0.3.85", optional = true }
wasm-bindgen = { version = "0.2.108", optional = true }
web-sys = { version = "0.3.85", features = [
  "KeyboardEvent",
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "ImageData",
  "Window",
  "HtmlInputElement",
  "FileList",
  "File",
  "ProgressEvent"
], optional = true }

# server
axum = { version = "0.8.8", optional = true }
tokio = { version = "1.49.0", features = ["rt-multi-thread"], optional = true }
leptos_axum = { version = "0.8.7", optional = true }
leptos-use = "0.18.0"

[features]
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:js-sys"
]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr"
]

[package.metadata.leptos]
output-name = "chip8-web"
site-root = "target/site"
style-file = "style/main.css"
assets-dir = "public"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
